# tidyrail-studio

./: .gitignore  ACCOUNT_SETUP_CHECKLIST.md  APP_ICON_SPEC.md  APP_STORE_LISTINGS.md  AUTH_STRATEGY.md  AUTOMATION_PLAN.md  BRAND.md  BUG_FIX_PROCESS.md  CHANGELOG.md  COMPANY.md  COOKIE_POLICY.md  DATABASE_SCHEMA.md  DECISION_LOG.md  DESIGN_SYSTEM.md  DESKTOP_CI_BUILD_PLAN.md  DESKTOP_PACKAGING_READINESS.md  DOMAIN_STRATEGY.md  DOWNLOAD_STRATEGY.md  EXTERNAL_SETUP.md  FIRST_PRODUCT_RELEASE_CHECKLIST.md  FUTURE_MONETIZATION.md  GITHUB_PAGES_SETUP.md  GITHUB_SUPPORT_HTTPS_REQUEST.md  GOOGLE_PLAY_LISTING.md  ICON_SYSTEM.md  IMPROVEMENT_BACKLOG.md  LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  LIGHTHOUSE_REPORT.md  LINUX_PACKAGING.md  LOCALIZATION_PLAN.md  MACOS_NOTARIZATION_CHECKLIST.md  MAC_DMG_PACKAGING.md  MAINTENANCE_PLAN.md  MARKETING_STRATEGY.md  MICROSOFT_STORE_LISTING.md  MOBILE_WIDGET_PLAN.md  NEXT_PROMPT.md  PATCH_PLAN.md  PLATFORM_STRATEGY.md  (+21 more)
desktop/renewal-desk/src-tauri/: Cargo.toml  tauri.conf.json
desktop/renewal-desk/src-tauri/capabilities/: default.json
desktop/renewal-desk/src-tauri/icons/: icon.icns
desktop/renewal-desk/src-tauri/src/: lib.rs  main.rs
docs/: CNAME  index.html  robots.txt  sitemap.xml
scripts/: qa-auth-config-safety.mjs  qa-desktop-packaging.mjs  qa-linux-packaging-readiness.mjs  qa-macos-dmg.mjs  qa-macos-notarization-readiness.mjs  qa-native-prereqs.mjs  qa-public-site.py  qa-renewal-backup-logic.mjs  qa-renewal-calendar-export.mjs  qa-renewal-logic.mjs  qa-renewal-sync-adapter.mjs  qa-supabase-rls.mjs  (+1 more)
website/: 404.html  CNAME  (+2 more)
(+92 files in other folders)
