[package]
name = "renewal-desk"
version = "0.1.0"
description = "Renewal Desk desktop shell"
authors = ["Tidyrail Studio"]
license = "Proprietary"
repository = "https://github.com/fmraz/tidyrail-studio"
edition = "2021"

[lib]
name = "renewal_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
